--- a/src/components/nameplate.css
+++ b/src/components/nameplate.css
@@ -1,15 +1,31 @@
 .nameplate {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 300px;
   border: 1px solid black;
   border-radius: 10px;
   margin: 5px;
+  text-decoration: none;
 }
 
 img {
   width: 100px;
   height: 100px;
   margin-bottom: 2em;
+}
+
+a:link {
+  text-decoration: none;
+  color: black;
+}
+
+a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color: darkgoldenrod;
 }
